[package]
name = "imflow"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.9"
pollster = "0.4.0"

clap = { version = "4.5.34", features = ["derive"] }

image = "0.25.6"
zune-image = {version = "0.4.15", features = ["all"]}
libheif-rs = "1.1.0"
jpegxl-rs = "0.11.2"

itertools = "0.12"
rexiv2 = "0.10.0"
threadpool = "1.8.1"
bytemuck = "1.22.0"

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "image_load"
harness = false
